--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -2,6 +2,7 @@ html {
   font-size: 10px;
   background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
   background-size: cover;
+  /* 把背景图像扩展至足够大，以使背景图像完全覆盖背景区域。 */
 }
 body,html {
   margin: 0;
@@ -13,29 +14,35 @@ body,html {
   display: flex;
   flex: 1;
   min-height: 100vh;
+  /* 设置段落的最小高度，其中vh是可视区百分比高度单位，如1vh等于可视区高度的百分之一 */
   align-items: center;
+  /* 弹性盒子元素在该行的侧轴（纵轴）上居中放置。 */
   justify-content: center;
+  /* 弹性盒子元素将向行中间位置对齐。该行的子元素将相互对齐并在行中居中对齐，
+  同时第一个元素与行的主起始位置的边距等同与最后一个元素与行的主结束位置的边距 */
 }
 
 .key {
   border: .4rem solid black;
   border-radius: .5rem;
+  /* 向 div 元素添加圆角边框 */
   margin: 1rem;
   font-size: 1.5rem;
   padding: 1rem .5rem;
-  transition: all .07s ease;
+  transition: all .07s linear;
   width: 10rem;
   text-align: center;
   color: white;
   background: rgba(0,0,0,0.4);
   text-shadow: 0 0 .5rem black;
 }
-
+    
 .playing {
   transform: scale(1.1);
   border-color: #ffc600;
   box-shadow: 0 0 1rem #ffc600;
 }
+
 
 kbd {
   display: block;
